fix logo alignment

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,7 +12,7 @@ header{
       height:80px;
       top:10px;
       margin:0;
-      margin-left: -40px;
+      margin-left: -65px;
       left:50%;
       z-index: 600;
 
