--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
       height: 80px;
       top: 10px;
       margin: 0;
-      margin-left: -40px;
+      margin-left: -65px;
       left: 50%;
       z-index: 600; }
       @media (min-width: 900px) {
